--- a/style.css
+++ b/style.css
@@ -1,8 +1,7 @@
 #map{
+    text-align: center;
     width: 50%;
     height: 70%;
-    margin-left: auto;
-    margin-right: auto;
     margin-bottom: 10%;
     margin-top: 10%;
 }
