--- a/style.css
+++ b/style.css
@@ -2,6 +2,14 @@
     text-align: center;
     width: 50%;
     height: 70%;
+    margin-left: auto;
+    margin-right: auto;
     margin-bottom: 10%;
     margin-top: 10%;
 }
+
+/* html, body {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+  } */
