--- a/style.css
+++ b/style.css
@@ -15,8 +15,9 @@ html, body {
   }
 
 #info-box {
+    text-align: center;
     background-color: white;
-    border: 1px solid black;
+    border: 4px solid black;
     bottom: 30px;
     height: 20px;
     padding: 10px;
