--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
     height: 70%;
     margin-left: auto;
     margin-right: auto;
-    margin-bottom: 5%;
+    margin-bottom: 2%;
     margin-top: 5%;
 }
 
@@ -24,4 +24,48 @@ html, body {
     position: absolute;
     left: 30px;
   }
+
+  .my-legend{
+    text-align: center;
+    float: center;
+    margin-left: 25%;
+    margin-right: 0%;
+  }
+
+  .my-legend .legend-title {
+    text-align: left;
+    margin-bottom: 8px;
+    font-weight:  normal;
+    font-size: 90%;
+    }
+  .my-legend .legend-scale ul {
+    margin: 0;
+    padding: 0;
+    float: left;
+    list-style: none;
+    border-style: groove;
+    border-color: gray;
+
+    }
+  .my-legend .legend-scale ul li {
+    display: block;
+    float: left;
+    width: 70px;
+    margin-bottom: 6px;
+    text-align: center;
+    font-size: 80%;
+    list-style: none;
+  
+    
+    }
+  .my-legend ul.legend-labels li span {
+    display: block;
+    float: left;
+    height: 15px;
+    width: 70px;
+    }
+
+  .my-legend a {
+    color: #777;
+    }
 
