--- a/style.css
+++ b/style.css
@@ -1,11 +1,10 @@
 #map{
     text-align: center;
-    width: 50%;
+    width: auto;
     height: 70%;
-    margin-left: auto;
-    margin-right: auto;
-    margin-bottom: 2%;
-    margin-top: 5%;
+    margin-left: 5%;
+    margin-right: 5%;
+    margin-bottom: 5%;
 }
 
 html, body {
